# Trajecto

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CODE_QUALITY_REPORT.md  Embedded_Porting.md  GEMINI.md  LICENSE  LICENSE_HARDWARE  LOSS_DWA_ANALYSIS.md  Makefile  NOTICE  OPTIMIZATION_SUMMARY.md  Plan.md  README.md  TESTING_GUIDE.md  TESTING_QUICKSTART.md  config_statistics.txt  data_acquire.py  dummy_gen.py  h5_viewer.py  preprocess.py  pyproject.toml  pytest.ini  train.py  train_eskf.py  train_two_stage.py  tune.py  validate.py  visualize.py
HPO/: agent.py  hpo_results.csv  kernel.py  monitor.py  protocol.py  visualize_hpo.py
SimGenerator/: Manifest.toml  Project.toml  main.jl
TrajectoFW/: CMakeLists.txt  README.md
TrajectoFW/main/: CMakeLists.txt  allan_variance_main.cpp  ble_task.cpp  ble_task.hpp  data_acquire.cpp  eskf.cpp  fsr_task.cpp  fsr_task.hpp  idf_component.yml  imu_task.cpp  imu_task.hpp  main.c  main.cpp  ring_buffer.cpp  ring_buffer.hpp  sensor_data.hpp  tcn_model.cc  tcn_model_float32.tflite  tcn_wrapper.cpp  tcn_wrapper.hpp
analyzer/: CondaPkg.toml  Manifest.toml  Plan.md  Project.toml  README.md  USAGE.md  baseline_comparison.jl  main.jl  verify_setup.jl
checkpoints/: eskf_tcn_model_best.pth  eskf_tcn_model_checkpoint.pth  eskf_tcn_model_epoch10.pth  eskf_tcn_model_epoch20.pth  eskf_tcn_model_epoch30.pth  eskf_tcn_model_epoch40.pth  eskf_tcn_model_epoch50.pth  eskf_tcn_model_epoch60.pth  eskf_tcn_model_epoch70.pth  eskf_tcn_model_epoch80.pth
collection/: data_acquire.py  dummy_gen.py  receive.py
data/: Groud_Truth_Data_1.h5  Sensor_Board_Data_1.h5
docs/: FEATURE_UPDATE_CHANGELOG.md  TCN_FEATURE_VECTOR_19D.md  Trajecto_main_report.md  todo.md
firmware/: CLAUDE.md  README.md  sdkconfig.defaults
firmware/components/trajecto_core/: CMakeLists.txt
firmware/components/trajecto_core/include/: eskf.hpp  eskf_fixed.hpp  fast_math.hpp  fast_math_lut.hpp  fixed_ops.hpp  fixed_point.hpp  fixed_point_constants.hpp  model_params.hpp  pen_state_detector.hpp  swinging_door.hpp  tcn_feature_constants.hpp  tcn_features_fixed.hpp  tcn_wrapper.hpp  trajecto_system.hpp
firmware/components/trajecto_core/src/: cordic_tables.cpp  eskf.cpp  eskf_fixed.cpp  fast_math_lut.cpp  pen_state_detector.cpp  swinging_door.cpp  tcn_features_fixed.cpp  tcn_model.cc  tcn_wrapper.cpp
firmware/components/trajecto_core/test/: test_eskf.cpp
firmware/main/: CMakeLists.txt  allan_variance_main.cpp  config.hpp  data_acquire.cpp  eskf.cpp  eskf.hpp  fast_math.hpp  idf_component.yml  imu_calibrator.hpp  main.cpp  model_params.hpp  tcn_model_dynamic_range_quant.tflite  trajecto_system.hpp
hardware/: README.md
model/: AEKF.py  AEKF_TCN.py  ESKF.py  ESKF_TCN.py  TCN.py  base_hybrid_model.py  config.py  dataset.py  dwa.py  losses.py  onlyTCN.py  parallel_scan_ops.py  pure_eskf.py  pure_integration.py  qat_tcn.py  rotation_utils.py  rotation_utils_jit.py  sim_dataset.py  stateful_tcn.py  validation.py  zupt_detector.py
model_old_deprecated/: AEKF.py  AEKF_TCN.py  onlyTCN.py  pure_eskf.py  pure_integration.py  train_old.py
onnx_export/: model_params.hpp  tcn_model.onnx
tests/: __init__.py  conftest.py  test_accel_bias_estimation.py  test_correction_direction.py  test_data_sanity.py  test_dataset.py  test_dataset_physics.py  test_eskf.py  test_eskf_components.py  test_eskf_integration_debug.py  test_eskf_tcn.py  test_eskf_with_virtual_measurements.py  test_final_demo.py  test_force_sensor_noise.py  test_gravity_per_sample.py  test_gravity_sign.py  test_gt_accel_at_anomaly.py  test_gt_data_consistency.py  test_initial_position_offset.py  test_optimal_config.py  test_optimization_comparison.py  test_parallel_scan.py  test_preprocessing.py  test_qat_tcn.py  test_rotation_utils.py  test_scale_growth_over_time.py  test_short_sequences.py  test_static_period_drift.py  test_tcn.py  test_velocity_calculation.py  test_virtual_measurements_active.py  test_zupt_activation.py  test_zupt_activity.py  test_zupt_coupling.py  test_zupt_detector.py  test_zupt_detector_inputs.py
utils/: acquire.py  acquire_calib.py  acquire_stationary.py  allan_variance_analysis.py  check_tflite.py  compute_combined_scaler.py  (+13 more)
(+73 files in other folders)
