[project]
name = "trajecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=1.1.1",
    "dash>=3.2.0",
    "h5py>=3.14.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "torch>=2.8.0",
    "textual>=0.70.0",
    "textual-plotext>=1.0.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "panel>=1.8.3",
    "watchfiles>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "ipykernel>=7.1.0",
    "hvplot>=0.12.1",
    "dtaidistance>=2.3.13",
    "scikit-learn>=1.7.2",
    "nbformat>=5.10.4",
    "allantools>=2021.9.23",
    "pyserial>=3.5",
    "onnx==1.19.1",
    "onnx2tf>=1.28.6",
    "ai-edge-litert==1.3.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "onnx-graphsurgeon>=0.5.8",
    "sng4onnx>=1.0.4",
    "onnxsim>=0.4.36",
    "evo>=1.34.0",
    "onnxscript>=0.6.0",
]
