idf_component_register(
    SRCS
        "src/eskf.cpp"
        "src/tcn_wrapper.cpp"
        "src/tcn_model.cc"
        "src/fast_math_lut.cpp"
        "src/swinging_door.cpp"
        "src/pen_state_detector.cpp"
    INCLUDE_DIRS
        "include"
        "../../managed_components/espressif__eigen/eigen"
    REQUIRES
        espressif__eigen
        espressif__esp-tflite-micro
)
